--- a/cfn/network/vpc-a.yml
+++ b/cfn/network/vpc-a.yml
@@ -42,6 +42,56 @@ Resources:
     Properties:
       GroupDescription: SecurityGroup for Lambda Functions
       VpcId: !Ref VPCA
+      SecurityGroupIngress:
+        - CidrIp: 0.0.0.0/0
+          IpProtocol: tcp
+          FromPort: 443
+          ToPort: 443
+          GroupDescription: "Security-Group for VPC Endpoint"
       Tags:
         - Key: "Name"
           Value: "LambdaSecurityGroup"
+
+  LambdaEndpointA:
+    Type: AWS::EC2::VPCEndpoint
+    Properties:
+      VpcEndpointType: Interface
+      PrivateDnsEnabled: true
+      SecurityGroupIds:
+        - !Ref LambdaSecurityGroupA
+      SubnetIds:
+        - !Ref PrivateSubnetA
+      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.lambda'
+      VpcId: !Ref VPCA
+
+  VPCLambdaExecutionRoleA:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: "Allow"
+            Principal:
+              Service: "lambda.amazonaws.com"
+            Action: "sts:AssumeRole"
+
+  VPCLambdaExecutionPolicyA:
+    Type: AWS::IAM::Policy
+    Properties:
+      PolicyName: !Sub '${AWS::StackName}-vpc-lambda-execution-policy'
+      PolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: "Allow"
+            Action:
+              - "logs:CreateLogGroup"
+              - "logs:CreateLogStream"
+              - "logs:PutLogEvents"
+              - "ec2:CreateNetworkInterface"
+              - "ec2:DescribeNetworkInterfaces"
+              - "ec2:DetachNetworkInterface"
+              - "ec2:DeleteNetworkInterface"
+              - "lambda:InvokeFunction"
+            Resource: "*"
+      Roles:
+        - !Ref VPCLambdaExecutionRoleA
