--- a/serverless.yml
+++ b/serverless.yml
@@ -6,22 +6,14 @@ provider:
   runtime: go1.x
   stage: dev
   region: ap-northeast-1
-  # iam:
-  #  role:
-  #    statements:
-  #      - Effect: "Allow"
-  #        Action:
-  #          - "s3:ListBucket"
-  #        Resource: { "Fn::Join" : ["", ["arn:aws:s3:::", { "Ref" : "ServerlessDeploymentBucket" } ] ]  }
-  #      - Effect: "Allow"
-  #        Action:
-  #          - "s3:PutObject"
-  #        Resource:
-  #          Fn::Join:
-  #            - ""
-  #            - - "arn:aws:s3:::"
-  #              - "Ref" : "ServerlessDeploymentBucket"
-  #              - "/*"
+  iam:
+   role:
+     statements:
+      - Effect: Allow
+        Action:
+          - lambda:InvokeFunction
+        Resource:
+          - arn:aws:lambda:ap-northeast-1:*:*
 
 custom:
   env:
